# datagateway-api

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  config.json.example  dev-requirements.in  dev-requirements.txt  docker-compose.yml  noxfile.py  postman_collection_icat.json  pyproject.toml  requirements.in  requirements.txt  ruff.toml  schema.sql  semantic.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  semantic.yml
.github/workflows/: ci-build.yml  coverage.yml  release-build.yml
common/: backend.py  backends.py  config.py  constants.py  database_backend.py  database_helpers.py  date_handler.py  exceptions.py  filter_order_handler.py  filters.py  helpers.py  logger_setup.py  python_icat_backend.py  python_icat_helpers.py  session_manager.py
common/database/: backend.py  filters.py  helpers.py  models.py
common/icat/: backend.py  filters.py  helpers.py  query.py
common/models/: db_models.py
datagateway_api/: config-1.yaml  config.json.example  config.yaml.example  logging.example.ini  main.py  search_api_mapping.json  search_api_mapping.json.example  wsgi.py
datagateway_api/auth/: session_bearer.py
datagateway_api/common/: backend.py  backends.py  base_query_filter_factory.py  config.py  constants.py  date_handler.py  exceptions.py  filter_order_handler.py  filters.py  helpers.py  logger_setup.py  query_filter.py  query_filter_factory.py  search_api_entity_endpoint_dict.py
datagateway_api/common/database/: backend.py  filters.py  helpers.py  models.py  session_manager.py
datagateway_api/common/datagateway_api/: backends.py  filter_order_handler.py  query_filter_factory.py
datagateway_api/common/icat/: backend.py  filters.py  helpers.py  icat_client_pool.py  lru_cache.py  query.py
datagateway_api/common/search_api/: filters.py  helpers.py  models.py  query_filter_factory.py  session_handler.py
datagateway_api/datagateway_api/: build_models.py  query_filter_factory.py
datagateway_api/datagateway_api/icat/: filters.py  helpers.py  icat_client_pool.py  lru_cache.py  models.py  python_icat.py  query.py  reader_query_handler.py
datagateway_api/datagateway_api/routers/: entity.py  ping.py  sessions.py
datagateway_api/read_only_api/models/: investigation.py
datagateway_api/read_only_api/routers/: my_data.py
datagateway_api/search_api/: condition_setting_query.py  filters.py  helpers.py  models.py  nested_where_filters.py  panosc_mappings.py  query.py  query_filter_factory.py  search_scoring.py  session_handler.py
datagateway_api/search_api/routers/: entity.py
datagateway_api/src/: api_start_utils.py  main.py
datagateway_api/src/auth/: session_bearer.py
datagateway_api/src/common/: base_query_filter_factory.py  config.py  constants.py  date_handler.py  exceptions.py  filter_order_handler.py  filters.py  helpers.py  logger_setup.py  utlis.py
docker/: config.yaml  docker-entrypoint.sh
icat/: post-boot-commands.asadmin
src/: main.py
src/swagger/: apispec_flask_restful.py  initialise_spec.py  openapi-new.yaml  openapi.yaml  swagger_generator.py  testing.py
test/: conftest.py  mock_data.py  test_backends.py  test_base.py  test_config.py  test_database_helpers.py  test_date_handler.py  test_endpoint_rules.py  test_entityHelper.py  test_exceptions.py  test_get_entity_object.py  test_get_filters_from_query.py  test_get_session_id_from_auth_header.py  test_helpers.py  test_is_valid_json.py  test_map_distinct_attrs.py  test_queries_records.py  test_query_filter.py  test_swaggerGenerator.py
test/datagateway_api/: test_backends.py  test_openapi.py  test_query_filter_factory.py
test/db/: conftest.py  test_database_filter_utilities.py  test_entityHelper.py  test_entity_helper.py  test_entity_relationships.py  test_helpers.py  test_query_filter_factory.py  test_requires_session_id.py
test/icat/: conftest.py  test_config.py  test_filter_order_handler.py  test_helpers.py  test_icat_client.py  test_isis_endpoints.py  test_lru_cache.py  test_query.py  test_session_handling.py  test_standard_endpoints.py
test/integration/: conftest.py  test_config.py  test_endpoint_rules.py  test_filter_order_handler.py  test_get_filters_from_query.py  test_get_session_id_from_auth_header.py
test/search_api/: conftest.py  test_error_handling.py  test_limit_filter.py  test_models.py  test_nested_where_filters.py  test_panosc_mappings.py  test_search_api_query_filter_factory.py  test_session_handler.py  test_skip_filter.py  test_units_conversion.py
test/test_base/: base_rest_test.py  constants.py
test/unit/: test_base_query_filter_factory.py  test_config.py  test_date_handler.py  test_exceptions.py  test_get_entity_object.py  test_get_filters_from_query.py  test_is_valid_json.py  test_map_distinct_attrs.py  test_queries_records.py  test_query_filter.py
util/: columns_to_drop.sql  icat_db_generator.py  panosc_search_scoring_populate.py  postman_collection_icat.json  setup_v11_1_0.py
(+239 files in other folders)
