[project]
name = "datagateway-api"
version = "11.0.0"
description = "ICAT API to interface with the DataGateway"
authors = [{ name = "Joshua Kitenge", email = "joshua.kitenge@stfc.ac.uk" },
           { name = "Matthew Richards", email = "matthew.richards@stfc.ac.uk" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "apispec==3.3.0",
    "PyYAML>=6.0,<7",
    "python-icat==1.0.0",
    "suds-community>=0.8.4,<0.9",
    "py-object-pool>=1.1,<2",
    "cachetools>=4.2.1,<5",
    "requests>=2.25.1,<3",
    "python-dateutil>=2.8.1,<3",
    "fastapi[all]==0.115.4",
]

[project.urls]
Repository = "https://github.com/ral-facilities/datagateway-api"

[tool.uv.sources]
datagateway_api = { workspace = true }

[tool.uv]
exclude-newer = "7 days"

[tool.uv.build-backend]
module-root = "."

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"


[dependency-groups]
code-analysis = [
    { include-group = "test" },
    "black>=24.10.0,<25",
    "flake8>=7.1.1,<8",
    "flake8-bandit>=4.1.1,<5",
    "flake8-black>=0.3.6,<0.4",
    "flake8-broken-line>=1.0.0,<2",
    "flake8-bugbear>=24.8.19,<25",
    "flake8-builtins>=2.5.0,<3",
    "flake8-commas>=4.0.0,<5",
    "flake8-comprehensions>=3.15.0,<4",
    "flake8-import-order>=0.18.2,<0.19",
    "flake8-logging-format>=1.0.0,<2",
    "pep8-naming>=0.14.1,<0.15",
    "ruff>=0.15.16",
]

test = [
    "pytest>=8.3.3,<9",
    "coverage>=7.6.4,<8",
    "pytest-cov>=5.0.0,<6",
    "pytest-icdiff>=0.9,<0.10",
]

scripts = [
    "pip-tools==5.3.1",
    "Faker==8.5.1",
]

dev = [
    { include-group = "code-analysis" },
    { include-group = "test" },
    { include-group = "scripts" },

]


[tool.coverage.run]
omit = [
    "test/*",
]
