[project]
name = "datagateway-api"
version = "11.0.0"
description = "ICAT API to interface with the DataGateway"
authors = [{ name = "Joshua Kitenge", email = "joshua.kitenge@stfc.ac.uk" },
           { name = "Matthew Richards", email = "matthew.richards@stfc.ac.uk" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "PyYAML>=6.0,<7",
    "python-icat>=1.0.0",
    "suds-community>=0.8.4,<0.9",
    "py-object-pool>=1.1,<2",
    "cachetools>=4.2.1,<5",
    "requests>=2.25.1,<3",
    "python-dateutil>=2.8.1,<3",
    "fastapi[all]>=0.115.4",
]

[project.urls]
Repository = "https://github.com/ral-facilities/datagateway-api"

[tool.uv.sources]
datagateway_api = { workspace = true }

[tool.uv]
exclude-newer = "7 days"

[tool.uv.build-backend]
module-root = "."

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"


[dependency-groups]
code-analysis = [
    { include-group = "test" },
    "ruff>=0.15.16",
]

test = [
    "pytest>=8.3.3,<9",
    "coverage>=7.6.4,<8",
    "pytest-cov>=5.0.0,<6",
    "pytest-icdiff>=0.9,<0.10",
]

scripts = [
    "pip-tools>=5.3.1",
    "Faker>=8.5.1",
]

dev = [
    { include-group = "code-analysis" },
    { include-group = "test" },
    { include-group = "scripts" },

]


[tool.coverage.run]
omit = [
    "test/*",
]
